core/test/scala/attribute1.check
error: Open quote is expected for attribute "{1}" associated with an  element type  "bar1".
  xml"<foo bar=$V1 bar1=1 />"
                       ^